[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"

[project]
name="site_conn_check"
version="1.1.0"
description="Package to check status code and response time of websites"
readme={file = "README.md", content-type="text/markdown"}
requires-python=">=3.8"
license={file = "LICENCE"}
keywords=["site-conn-check", "status code", "response time"]
authors = [
    {name ="Joshua Abbey", email="Joshuaabbey2022@gmail.com"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies =[
        "certifi==2023.5.7",
        "charset-normalizer==3.1.0",
        "decorator==5.1.1",
        "idna==3.4",
        "numpy==1.24.3",
        "pandas==2.0.2",
        "python-dateutil==2.8.2",
        "pytz==2023.3",
        "requests==2.31.0",
        "six==1.16.0",
        "tabulate==0.9.0",
        "tzdata==2023.3",
        "validators==0.20.0",
        "SQLAlchemy==2.0.15",
]


[project.urls]
Repository="https://github.com/rxxyxd/site-conn-check.git"

[project.scripts]
site_conn_check = "site_conn_check.main:main"